# statickg

./: CHANGELOG.md  etl.yml.example  pyproject.toml
.github/workflows/: ci.yml
statickg/: __main__.py  helper.py  main.py  models.py
statickg/models/: repository.py
statickg/services/: fuseki.py  version.py
