[tool.poetry]
name = "statickg"
version = "1.0.0"
description = "Tools for creating & running knowledge graphs from files"
authors = ["Binh Vu <bvu687@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
