[tool.poetry]
name = "statickg"
version = "1.0.0"
description = "Tools for creating & running knowledge graphs from files"
authors = ["Binh Vu <bvu687@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
drepr-v2 = "^1.3.11"
orjson = "^3.10.3"
hugedict = "^2.13.3"
typer = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
